# fontsTrans

./: .gitignore  README.md
desktop/: electron-builder.json5  package.json  pnpm-lock.yaml  tsconfig.json
desktop/electron/: electron-env.d.ts  main.ts  preload.ts
desktop/py/.pyinstaller_build/ttf2woff2/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-ttf2woff2.txt  xref-ttf2woff2.html
desktop/py/.pyinstaller_spec/: ttf2woff2.spec
desktop/shared/: ipc.ts
desktop/src/: App.css  App.tsx  index.css
py/: build-mac.sh  build-win.ps1  pyproject.toml
py/src/: ttf2woff2.py
