[project]
name = "fonts-trans-cli"
version = "0.1.0"
description = "TTF 转 WOFF2 并支持常用字子集化的命令行工具。"
requires-python = ">=3.10"
dependencies = [
  "fonttools>=4.58.0",
  "brotli>=1.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.6.0"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
cache-keys = ["pyproject.toml", "uv.lock"]

[tool.uv.workspace]
members = []
